# cosmic-crunch

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  README.md  convert_files.py  get_files.py  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
cosmic_crunch/: __init__.py  _parallel.py  cli.py  convert.py  fetch.py
docs/: api.md  api.rst  conf.py  requirements.txt
tests/: conftest.py  test_cli.py  test_convert.py  test_crawler.py  test_fetch_download.py  test_parser.py  test_retry.py  test_roundtrip.py
tests/fixtures/: README.md
tests/fixtures/listings/: 00_glevels_root.html  01_cosmic1_postproc.html  02_cosmic1_postproc_y2006.html  03_cosmic1_2006-05-01_date.html  04_cosmic1_2006-05-01_L2.html  05_cosmic1_2006-05-01_L2_txt.html  README.md
