[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cosmic-crunch"
dynamic = ["version"]
description = "Bulk-download JPL GENESIS COSMIC-1 (FORMOSAT-3) GNSS radio-occultation ASCII profiles and convert them to netCDF4."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Erick Shepherd", email = "dev@erickshepherd.com" },
]
keywords = [
    "COSMIC", "COSMIC-1", "FORMOSAT-3", "GENESIS", "JPL",
    "radio occultation", "RO", "GNSS-RO", "GNSS", "GPS", "atmospheric profiles",
    "atmospheric science", "occultation", "netCDF", "netCDF4",
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    # Floors track the versions the test matrix passes against;
    # requests/pandas floors are pinned by the design, netCDF4/tqdm are starting
    # points to be confirmed. Loosening below these is a deliberate decision.
    "requests>=2.28",
    "pandas>=2.0",
    "netCDF4>=1.6",
    "tqdm>=4.60",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
cosmic-crunch = "cosmic_crunch.cli:main"

[project.urls]
Homepage = "https://github.com/ErickShepherd/cosmic-crunch"
Documentation = "https://cosmic-crunch.readthedocs.io/en/latest/"
Source = "https://github.com/ErickShepherd/cosmic-crunch"
"Bug Tracker" = "https://github.com/ErickShepherd/cosmic-crunch/issues"

[tool.hatch.version]
path = "cosmic_crunch/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["cosmic_crunch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
# Permissive: keep ruff's default lint set (pyflakes `F` + the core pycodestyle
# `E4`/`E7`/`E9` groups), which catches real problems -- unused imports,
# undefined names, comparison/statement bugs -- without fighting this codebase's
# deliberate aligned-assignment and blank-line style (E1/E2 spacing rules and
# E501 line length are intentionally NOT enforced).
